SERVER-25942 Don't validate views in listCollections unless they are being returned